--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ if(document.getElementById("inputother").required == true){
 						</div>
 						<div class="input-group">
 							<span><i class="fab fa-line" aria-hidden="true"></i></span>
-							<input id="lineid" value="" name="entry.546970667" type="text" placeholder="Line ID(請再次大小寫唷)" required=""> 
+							<input id="lineid" value="" name="entry.546970667" type="text" placeholder="Line ID(請再次確認大小寫唷)" required=""> 
 						</div>
 						<div class="input-group">
 							<span><i class="fas fa-phone" aria-hidden="true"></i></span>
