--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>財務預測諮詢報名表</title>
+<title>免費財務預測諮詢報名表</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="" />
@@ -33,21 +33,21 @@ if(document.getElementById("inputother").required == true){
 <iframe name="iframe_redirect" id="iframe_redirect" style="display:none;" onload="if(typeof sent_redirect!='undefined'){window.location='./index.html';}"></iframe>
 
 <div class="signupform">
-<h1>財務預測諮詢報名表</h1>
+<h1>免費財務預測諮詢報名表</h1>
 	<div class="container">
 		
 		<div class="agile_info">
 			<div class="w3l_form">
 				<div class="left_grid_info">
 					<h3>哈囉~ ^^😉</h3>
-					<h4>我是Gina(吉娜), 感謝你花時間進來填寫財務諮詢報名表.</h4></br>
-					<h4>我是男寶新手媽咪,當初因為懷孕關係選擇離開職場,但是也因此準備懷孕前到懷孕過程中還有小孩出生後,種種變化讓我深感家庭理財重要性及急迫性,特別是家中支出即將面臨巨大轉變和調整,不能只想自己和我先生吃香喝辣就好, 而是需要提早規劃未來才能跟小孩子一起吃香喝辣的享受生活.🍝🍰🍼🚗</h4>
+					<h4>我是Gina(吉娜), 感謝您花時間進來填寫財務諮詢報名表.</h4></br>
+					<h4>我是男寶新手媽咪,當初因為懷孕關係選擇離開職場,但是也因此準備懷孕前到懷孕過程中還有小孩出生後,種種變化讓我深感家庭理財重要性及急迫性,特別是家中支出即將面臨巨大轉變和調整,不能只想自己和我先生吃香喝辣就好, 而是需要提早規劃，未來才能跟小孩子享受實踐生活美好.🍝🍰🍼🚗</h4>
 					<h4>在我懷孕期間的迷惘和生完小孩後的茫然🤦‍♀️,在偶然機會下,接觸珊迪兔的✔''精算媽咪家計簿''Podcast節目和✔''好厝Howtrue投資理財平台''找到共同成長互相交流的友善學習環境而開啟家庭財務長和理財規劃師成長之路~</h4></br>
 					<h4>🔸諮詢時間: 大約30-40分鐘
 </h4></br>
 					<h4>🔸諮詢方式: 使用線上google meet. 預約好日期之後, 我會發出會議連結給你唷.</h4></br>
 					<h4>🔸注意事項：</h4></br>
-					<p>1.目前仍有正式工作, 填寫完成報名表後,請你耐心等待,我會盡快加您好友預約時間唷</p></br>
+					<p>1.目前仍有正式工作, 填寫完成報名表後,請您耐心等待,我會盡快加您好友預約時間唷</p></br>
 					<p>2.若預約時間臨時有事需改期,請您提早傳訊息告知唷.</p></br>
 					<p>3.您的個人資料僅供單次諮詢聯絡使用, 不做其他用途, 以保障您的個資.</p></br>
 					<!--
