--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ if(document.getElementById("inputother").required == true){
 <iframe name="iframe_redirect" id="iframe_redirect" style="display:none;" onload="if(typeof sent_redirect!='undefined'){window.location='./index.html';}"></iframe>
 
 <div class="signupform">
-<h1>免費財務諮詢報名表</h1>
+<h1>波媽理財趣</h1>
+<h1>Gina's FQ FUN</h1>
 	<div class="container">
 		
 		<div class="agile_info">
@@ -62,8 +63,9 @@ if(document.getElementById("inputother").required == true){
 				</div>
 			</div>
 			<div class="w3_info">
+                                <center><h2>免費財務諮詢報名表</h2></center>
 				<center><h2>輸入您的資料</h2></center>
-				<center><p>期待與您有個美好的時光.</p></center>
+				<center><p>期待與您有個美好的時光</p></center>
 						<form onsubmit="sent_redirect=true" target="iframe_redirect" id="google-form" name"google-form" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSd4WQkGxokjc-dmEZMCwHEF9dVH9NsnGHssU7tFsej6uzSAPQ/formResponse" method="post">
 						<div class="input-group">
 							<span><i class="fa fa-user" aria-hidden="true"></i></span>
@@ -147,6 +149,31 @@ if(document.getElementById("inputother").required == true){
 						</div>
 							<button onclick="submit();" id="submit" class="btn btn-danger btn-block" name="button" value="submit" type="submit">送出</button>                
 					</form>
+
+</br></br>
+<div class="w2_info">
+
+<h2>加入波媽理財趣的電子報，輕鬆收到最新文章及其他免費資源。</h2>
+
+<form onsubmit="sent_redirect=true" target="iframe_redirect" id="google-form" name"google-form" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSe-V9ghZN8PPsE8_E2v6LoAgJnyogeOAobORqgaB6BLxRJARA/formResponse" method="post">
+
+<div class="input-group">
+<span><i class="fa fa-user" aria-hidden="true"></i></span>
+<input id="name2" value="" name="entry.652223063" type="text" placeholder="姓名（暱稱亦可）" required=""> 
+</div>
+<div class="input-group">
+<span><i class="fa fa-envelope" aria-hidden="true"></i></span>
+<input type="email" value="" id="email2" name="entry.2036501501" placeholder="Email" required="required">
+</div>
+
+<button onclick="submit2();" id="submit2" type="submit" value="submit2" name="button2" class="btn btn-danger btn-block" title="請寄給我!">請寄給我</button>
+
+
+</form>
+</div>
+
+
+
 			</div>
 			<div class="clear"></div>
 			</div>
@@ -176,7 +203,22 @@ if(document.getElementById("inputother").required == true){
     });
   </script>
 
-  
+  <script>
+    $(function() {
+      $('#submit2').on('click', function() {
+        
+       if ($('#name2').val() && $('#email2').val()) {
+        $.ajax({
+
+          complete: function() {
+            alert('資料已送出！');
+          }
+        });
+        }
+      });
+      
+    });
+  </script>  
 
 
 	</body>
