--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>免費財務諮詢報名表</title>
+<title>波媽理財趣</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="" />
@@ -12,7 +12,6 @@
 </head>
 <body>
 
-	
 <script>
 
 function changeradioother(){
