--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous"></link>
 </head>
 <body>
+
 <script>
 
 function changeradioother(){
@@ -101,7 +102,7 @@ if(document.getElementById("inputother").required == true){
 						</div>
 						<div class="input-group">
 							<span><i class="fab fa-line" aria-hidden="true"></i></span>
-							<input id="lineid" value="" name="entry.546970667" type="text" placeholder="Line ID(請再次大小寫唷)" required=""> 
+							<input id="lineid" value="" name="entry.546970667" type="text" placeholder="Line ID(請再次確認大小寫唷)" required=""> 
 						</div>
 						<div class="input-group">
 							<span><i class="fas fa-phone" aria-hidden="true"></i></span>
